# dataclass_type_validator

./: .gitignore  README.md  __init__.py  base_dataclass.py  base_validator.py  pyproject.toml  pytest.ini  test_validators.py  validators.py
.github/workflows/: learn-github-actions.yml  test-package.yml
test/: test_validators.py
type_validator/: __init__.py  base_dataclass.py  base_validator.py  test_validators.py  validators.py
